2010-11-16	Gedare Bloom <giddyup44@yahoo.com>

	* rtems/score/sparc64.h: Fix typo.

2010-10-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/cpu.h: Add RTEMS_COMPILER_NO_RETURN_ATTRIBUTE to
	_CPU_Context_restore() because it does not return. Telling GCC this
	avoids generation of dead code.

2010-08-19	Gedare Bloom <giddyup44@yahoo.com>

	PR 1681/cpukit
	* rtems/score/cpu.h: With the percpu patch, ASM uses
	INTERRUPT_STACK_HIGH instead of _CPU_Interrupt_stack_high. The
	sparc64 was still using the old variable, which was declared in its
	cpu.h file. This patch comments out the declaration and switch to
	using INTERRUPT_STACK_HIGH.

2010-07-29	Gedare Bloom <giddyup44@yahoo.com>

	PR 1635/cpukit
	* rtems/score/types.h: Refactoring of priority handling, to isolate the
	bitmap implementation of priorities in the supercore so that priority
	management is a little more modular. This change is in anticipation
	of scheduler implementations that can select how they manage tracking
	priority levels / finding the highest priority ready task. Note that
	most of the changes here are simple renaming, to clarify the use of
	the bitmap-based priority management.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/cpu.h: Include <rtems/score/types.h> first.
	* rtems/score/types.h: Use <rtems/score/basedefs.h> header file.

2010-06-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1561/cpukit
	* .cvsignore, ChangeLog, Makefile.am, Makefile.in, README, context.S,
	cpu.c, preinstall.am, rtems/asm.h, rtems/score/cpu.h,
	rtems/score/sparc64.h, rtems/score/types.h: New files.

2010-05-10  Gedare Bloom <gedare@gwmail.gwu.edu>

	* README: Explain separation of score between here and libcpu.

2010-05-03  Gedare Bloom <gedare@gwmail.gwu.edu>

	* rtems/score/cpu.h, context.S, cpu.c: Remove privileged
	registers from context.

2010-05-03  Gedare Bloom <gedare@gwmail.gwu.edu>

	* cpu.c: Remove interrupt handling code.  Moved to libcpu.
